near-sdk/compilation_tests/impl_generic.stderr
error: Impl type parameters are not supported for smart contracts.
 --> compilation_tests/impl_generic.rs:9:20
  |
9 | struct Incrementer<T> {
  |                    ^

error: Impl type parameters are not supported for smart contracts.
  --> compilation_tests/impl_generic.rs:15:6
   |
15 | impl<'a, T: 'a + std::fmt::Display> Incrementer<T> {
   |      ^^
